# vsm_frigo

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.prod  build-styles.sh  crear_permiso.py  docker-compose.prod.yaml  docker-compose.yml  insert_empleados.py  manage.py  materiales_expandido2.xlsx  package-lock.json  package.json  prod_entrypoint.sh  pyproject.toml  requirements.txt  run-prod.sh  sap_client.py  tailwind.config.js  test.json  test_env.py  test_sap_connection.py  test_sap_rfc.py  test_saponoso.py  watch-styles.sh
proxy/: Dockerfile  nginx.conf  nginx.prod.conf
sap/: nwrfcsdk.conf  pyrfc-3.3.1.tar.gz:Zone.Identifier
vsm_app/: admin.py  apps.py  backends.py  context_processors.py  decorator.py  logout.py  models.py  urls.py  views.py
vsm_app/migrations/: 0001_initial.py  0002_alter_permisos_descripcion.py  0002_vsm_estado.py  0003_alter_permisos_descripcion.py  0003_rename_responsable_vsm_solicitante.py  0004_remove_tags_productos_nombre_and_more.py  0004_vsm_numero_sap.py  0005_permisos_roles_usuarios.py  0005_remove_perfil_riesgo_descripcion_and_more.py  0006_alter_roles_permisos.py  0006_vsmproducto_firma_retirante.py  0007_remove_vsmproducto_firma_retirante.py  0007_subfamilias.py  0008_remove_maestro_de_materiales_familia_and_more.py  0008_vsmproducto_firma_retirante.py  0009_alter_vsm_cantidad_entregada.py  0009_alter_vsmproducto_firma_retirante.py  0010_delete_epp.py  0010_rename_fecha_creacion_vsm_fecha_solicitud_and_more.py  0012_alter_vsm_solicitante.py  (+47 more)
vsm_frigo/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
(+34 files in other folders)
