[project]
name = "vsm-frigo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decouple>=0.0.7",
    "django>=5.2.6",
    "django-browser-reload>=1.20.0",
    "django-cors-headers>=4.9.0",
    "django-cotton>=2.1.3",
    "mozilla-django-oidc>=4.0.1",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "tailwind>=3.1.5b0",
]
