[project]
name = "vsm-frigo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decouple>=0.0.7",
    "django>=5.2.6",
    "django-browser-reload>=1.20.0",
    "django-cors-headers>=4.9.0",
    "django-cotton>=2.1.3",
    "django-daisy>=1.1.1",
    "django-environ>=0.12.0",
    "environ>=1.0",
    "environs>=14.3.0",
    "htmx>=0.0.0",
    "httpx>=0.28.1",
    "mozilla-django-oidc>=4.0.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "polars>=1.34.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.10",
    "pyodbc>=5.2.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "tailwind>=3.1.5b0",
    "uv==0.8.18",
    "xhtml2pdf>=0.2.17",
]
